<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="48dp"
    android:paddingBottom="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_to"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_to"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sms_to"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_contacts"
        app:layout_constraintBottom_toBottomOf="@id/til_to"
        app:layout_constraintRight_toRightOf="@id/til_to"
        app:layout_constraintTop_toTopOf="@id/til_to" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_body"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_to">

        <!--        <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_body"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/sms_body"
                    android:imeOptions="actionSend"
                    android:inputType="text" />-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_body"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sms_body"
            android:lines="7" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/draft_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_send"
        app:layout_constraintTop_toBottomOf="@id/til_body" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/draft_send"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_body" />

</androidx.constraintlayout.widget.ConstraintLayout>